tdf#128889: don't write "page break after" into w:pPr

This produced invalid OOXML, which Word considers as "page before",
and LibreOffice ignores when re-importing.

Make sure to write it as *trailing* w:r with w:br, as Word also does
when imports ODT with this atribute, and saves as DOCX.

Change-Id: Ifc4f45d65d4455ecb5cd62aed1ef6a03375c8aa4
Reviewed-on: https://gerrit.libreoffice.org/83232
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit b0e7e494b6bc69d3833c0a6c256ff8106a4a24cb)
Reviewed-on: https://gerrit.libreoffice.org/83334
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>